# chauder

./: .gitignore  CMakeLists.txt  README.md
assets/fragment/: 2d_circle.frag
assets/geometry/: 2d_point_to_line_triangle_strip.geom  2d_point_to_square_triangle_strip.geom
example/: CMakeLists.txt  geometry_shader.c  init_finalize.c  line_geometry_shader.c  load_shader.c
glad/: CMakeLists.txt
glad/include/glad/: gl.h
src/: CMakeLists.txt  io.c  program.c  setup.c  shader.c
src/include/: io.h  log.h  program.h  shader.h
src/interface/: chauder.h
